fix: cannot scroll on phone screen, projets not visible on small screens, link texts

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   display: block;
 }
 
+.canvas {
+  touch-action: pan-y !important;
+}
+
 .black-gradient {
   background: #000000; /* fallback for old browsers */
   background: -webkit-linear-gradient(
